--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
 attrs==25.4.0
+cachetools==6.2.2
 certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
@@ -10,6 +11,8 @@ colorama==0.4.6
 cryptography==46.0.3
 distro==1.9.0
 fastapi==0.122.0
+google-auth==2.43.0
+google-genai==1.52.0
 griffe==1.15.0
 h11==0.16.0
 httpcore==1.0.9
@@ -23,6 +26,8 @@ jsonschema-specifications==2025.9.1
 mcp==1.22.0
 openai==2.8.1
 openai-agents==0.6.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.23
 pydantic==2.12.5
 pydantic-settings==2.12.0
@@ -34,9 +39,11 @@ PyYAML==6.0.3
 referencing==0.37.0
 requests==2.32.5
 rpds-py==0.29.0
+rsa==4.9.1
 sniffio==1.3.1
 sse-starlette==3.0.3
 starlette==0.50.0
+tenacity==9.1.2
 tqdm==4.67.1
 types-requests==2.32.4.20250913
 typing-inspection==0.4.2
